// ========================================
// EyeSpeak ERD — 22 Tables (dbdiagram.io)
// ========================================

// ========================
// Enum 정의
// ========================

Enum role {
  PATIENT
  GUARDIAN
}

Enum gender {
  M
  F
}

Enum matching_status {
  PENDING
  LINKED
  UNLINKED
}

Enum content_type {
  TEXT
  PHRASE
  EXPRESSION
}

Enum call_type {
  NORMAL
  SOS
}

Enum call_status {
  PENDING
  RECEIVED
  MISSED
}

Enum tts_status {
  NONE
  READY
}

Enum mood_type {
  SAD
  HAPPY
  CALM
  JOYFUL
  ANXIOUS
  ANGRY
  TIRED
}

Enum sentiment_type {
  POSITIVE
  NEGATIVE
  NEUTRAL
}

// ========================
// 인증/계정 그룹
// ========================

Table user {
  id bigint [pk, increment]
  login_id varchar [unique, not null, note: '이메일 주소']
  password varchar [not null, note: 'BCrypt 해시']
  name varchar [not null, note: '사용자 표시 이름']
  role role [not null]
  is_agree boolean [not null, default: false, note: '약관 동의 여부']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table patient {
  id bigint [pk, increment]
  user_id bigint [unique, note: '링크 전 NULL']
  name varchar [not null, note: '환자 이름 (보호자가 설문에서 입력)']
  birth_year int [not null, note: '출생연도']
  gender gender [not null]
  fcm_token varchar [note: 'FCM 토큰']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table guardian {
  id bigint [pk, increment]
  user_id bigint [unique, not null]
  fcm_token varchar [note: 'FCM 토큰']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table matching {
  id bigint [pk, increment]
  patient_id bigint [unique, not null]
  guardian_id bigint [unique, not null]
  invite_code varchar [unique, not null, note: '초대코드']
  status matching_status [not null]
  linked_at datetime [note: 'LINKED 시점에 채워짐']
  created_at datetime [not null]
  updated_at datetime [not null]
}

// ========================
// 소통 그룹
// ========================

Table category {
  id bigint [pk, increment]
  parent_id bigint [note: 'NULL이면 최상위 카테고리']
  name varchar [not null]
  depth int [not null, note: '0=최상위, 1=중간, 2=말단']
  order_index int [not null, note: '같은 부모 내 표시 순서']
  created_at datetime [not null]

  Note: '시드 데이터 — 계층형 표현 분류 (자기참조)'
}

Table phrase {
  id bigint [pk, increment]
  category_id bigint [not null]
  content varchar [not null, note: '선택 가능한 표현']
  order_index int [not null, note: '카테고리 내 표시 순서']
  created_at datetime [not null]

  Note: '시드 데이터 — 선택 가능한 개별 표현'
}

Table favorite_phrase {
  id bigint [pk, increment]
  matching_id bigint [not null]
  phrase_id bigint [not null]
  created_at datetime [not null]

  indexes {
    (matching_id, phrase_id) [unique]
  }
}

Table message {
  id bigint [pk, increment]
  matching_id bigint [not null]
  sender_role role [not null]
  content_type content_type [not null]
  content text [not null]
  phrase_id bigint [note: 'PHRASE 타입일 때만 값 존재']
  expr_id bigint [note: 'EXPRESSION 타입일 때만 값 존재']
  is_read boolean [not null, default: false]
  created_at datetime [not null]

  indexes {
    (matching_id, created_at)
  }
}

// ========================
// 호출 그룹
// ========================

Table call {
  id bigint [pk, increment]
  matching_id bigint [not null]
  type call_type [not null]
  status call_status [not null]
  created_at datetime [not null, note: '호출 시각']

  indexes {
    (matching_id, created_at)
  }
}

// ========================
// 설정 그룹
// ========================

Table patient_setting {
  id bigint [pk, increment]
  matching_id bigint [unique, not null]
  activation_delay int [not null, note: 'gaze 인식 차단 시간 (ms)']
  dwell_time int [not null, note: '선택 인식 최소 응시 시간 (ms)']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tts_setting {
  id bigint [pk, increment]
  matching_id bigint [unique, not null]
  is_enabled boolean [not null, default: false, note: 'status와 무관하게 활성화 가능 — READY면 커스텀 음성, 그 외에는 기본 음성 사용']
  status tts_status [not null, default: 'NONE']
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table tts_voice_file {
  id bigint [pk, increment]
  tts_setting_id bigint [not null]
  file_url varchar [not null, note: 'S3 등 저장 경로']
  file_name varchar [not null, note: '원본 파일명']
  created_at datetime [not null]
}

// ========================
// 콘텐츠 그룹
// ========================

Table leisure_content {
  id bigint [pk, increment]
  matching_id bigint [not null]
  name varchar [not null, note: '콘텐츠 이름']
  url varchar [note: '콘텐츠 URL']
  category varchar [note: '콘텐츠 카테고리 (sports/news/music/radio/audiobook)']
  created_at datetime [not null]
  updated_at datetime [not null]

  Note: 'url과 category 중 하나는 반드시 존재 (서버+프론트 검증). 최대 5개.'
}

// ========================
// 루틴 그룹
// ========================

Table time_slot {
  id bigint [pk, note: '고정 ID (AUTO_INCREMENT 아님)']
  name varchar [not null]
  start_time time [not null]
  end_time time [not null]

  Note: '시드 데이터 7행 — 3시간 단위 시간대'
}

Table activity_tag {
  id bigint [pk, note: '고정 ID (AUTO_INCREMENT 아님)']
  name varchar [not null]
  order_index int [not null, note: '화면 표시 순서']

  Note: '시드 데이터 11행 — 활동 태그'
}

Table routine_slot_tag {
  id bigint [pk, increment]
  matching_id bigint [not null]
  time_slot_id bigint [not null]
  activity_tag_id bigint [not null]
  created_at datetime [not null]

  indexes {
    (matching_id, time_slot_id) [unique, note: '하나의 시간대에 활동 태그 1개만']
  }
}

// ========================
// 로그 그룹
// ========================

Table usage_log {
  id bigint [pk, increment]
  matching_id bigint [not null]
  phrase_id bigint [note: '시드 표현 선택 시 (PHRASE 테이블 참조)']
  expr_id bigint [note: '맞춤 표현 선택 시 (EXPRESSIONS 테이블 참조)']
  content varchar [note: '자유 표현(맞춤대화) 내용 — phrase_id·expr_id 둘 다 NULL일 때']
  time_slot_id bigint [not null, note: '의도적 비정규화 — used_at 범위 계산보다 인덱스 탐색이 빠름']
  mood_type mood_type [note: '사용 시점 환자 기분 종류 — NULL 가능']
  mood_level int [note: '감정 정도 1~5 — NULL 가능']
  used_at datetime [not null, note: '사용 시각']

  indexes {
    (matching_id, used_at)
    (matching_id, phrase_id)
    (matching_id, expr_id)
    (matching_id, time_slot_id)
  }

  Note: 'phrase_id / expr_id / content 중 하나만 값이 있고 나머지는 NULL'
}

// ========================
// 맞춤 표현 그룹 (추천 시스템용)
// ========================

Table expressions {
  id bigint [pk, increment]
  matching_id bigint [not null]
  content varchar [not null, note: '환자가 만든 맞춤 표현']
  sentiment sentiment_type [note: '긍정/부정/중립']
  category varchar [note: '표현의 intent (통증/욕구/감정 등)']
  last_used datetime [note: '마지막 사용 시각 — 최근 표현 우선 추천에 활용 (usage_log INSERT 시 트랜잭션으로 동기화)']
  created_at datetime [not null]

  indexes {
    (matching_id, last_used)
    (matching_id, category)
  }

  Note: '유저 데이터 — 매칭별 개인화 표현 (PHRASE 시드와 구분). INSERT-only — 수정 없음'
}

Table expression_keywords {
  id bigint [pk, increment]
  expr_id bigint [not null]
  keyword varchar [not null, note: '표현에서 추출한 키워드']

  indexes {
    (expr_id)
    (keyword)
  }

  Note: '추천 시스템 키워드 검색용 — VARCHAR 파싱보다 인덱스 탐색이 빠름'
}

Table user_words {
  matching_id bigint [pk, note: 'PK이자 FK — MATCHING과 1:1이라 별도 id 불필요']
  subjects json [note: '주어 목록 ["나", "우리", "손녀딸"]']
  objects json [note: '목적어 목록 ["물", "음식", "약"]']
  verbs json [note: '동사 목록 ["먹다", "마시다", "보다"]']
  created_at datetime [not null]
  updated_at datetime [not null]

  Note: 'pastWords 마이그레이션 — 단어 조합 추천 시 부족분 보충용'
}

Table daily_mood {
  id bigint [pk, increment]
  matching_id bigint [not null]
  mood_date date [not null]
  mood_type mood_type [not null, note: 'SAD/HAPPY/CALM/JOYFUL/ANXIOUS/ANGRY/TIRED']
  mood_level int [not null, note: '감정 정도 1~5 / 1~2=조금 / 3=보통 / 4~5=매우']
  created_at datetime [not null]

  indexes {
    (matching_id, mood_date) [unique, note: '하루에 기분 기록 딱 1개']
  }

  Note: '환자 앱 첫 사용 시 기분 선택 — 추천 로직 입력 + 보호자 캘린더 날짜별 기분 조회용'
}

Table general_corpus {
  id bigint [pk, increment]
  content text [not null, note: 'general_db[].text에 해당']
  sentiment sentiment_type [note: '긍정/부정/중립 — NULL 가능']
  weight float [not null, default: 1.0, note: '추천 가중치']
  created_at datetime [not null]

  Note: '전역 일반 말뭉치 — 매칭/유저와 무관, general_sentences_with_sentiment.json 마이그레이션 대상'
}

// ========================
// 테이블 그룹
// ========================

TableGroup auth {
  user
  patient
  guardian
  matching
}

TableGroup communication {
  category
  phrase
  favorite_phrase
  message
}

TableGroup call_group {
  call
}

TableGroup settings {
  patient_setting
  tts_setting
  tts_voice_file
}

TableGroup content {
  leisure_content
}

TableGroup routine {
  time_slot
  activity_tag
  routine_slot_tag
}

TableGroup log {
  usage_log
}

TableGroup recommendation {
  expressions
  expression_keywords
  user_words
  daily_mood
  general_corpus
}

// ========================
// References (FK)
// ========================

// 인증/계정
Ref: patient.user_id - user.id
Ref: guardian.user_id - user.id
Ref: matching.patient_id - patient.id
Ref: matching.guardian_id - guardian.id

// 소통
Ref: category.parent_id > category.id
Ref: phrase.category_id > category.id
Ref: favorite_phrase.matching_id > matching.id
Ref: favorite_phrase.phrase_id > phrase.id
Ref: message.matching_id > matching.id
Ref: message.phrase_id > phrase.id
Ref: message.expr_id > expressions.id

// 호출
Ref: call.matching_id > matching.id

// 설정
Ref: patient_setting.matching_id - matching.id
Ref: tts_setting.matching_id - matching.id
Ref: tts_voice_file.tts_setting_id > tts_setting.id

// 콘텐츠
Ref: leisure_content.matching_id > matching.id

// 루틴
Ref: routine_slot_tag.matching_id > matching.id
Ref: routine_slot_tag.time_slot_id > time_slot.id
Ref: routine_slot_tag.activity_tag_id > activity_tag.id

// 로그
Ref: usage_log.matching_id > matching.id
Ref: usage_log.phrase_id > phrase.id
Ref: usage_log.time_slot_id > time_slot.id
Ref: usage_log.expr_id > expressions.id

// 맞춤 표현
Ref: expressions.matching_id > matching.id
Ref: expression_keywords.expr_id > expressions.id
Ref: user_words.matching_id - matching.id
Ref: daily_mood.matching_id > matching.id
